# AzVault

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY_POLICY.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  windows-installers.yml
examples/: secrets-import.example.json
scripts/: generate_icon.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/azure/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/models/: mod.rs
src/components/access/: AccessView.tsx
src/components/auth/: SignIn.tsx
src/components/certificates/: CertificateDetails.tsx  CertificatesList.tsx
src/components/command-palette/: CommandPalette.tsx  fuzzyMatch.ts
src/components/common/: DangerConfirmDialog.tsx  DetailsDrawer.tsx  EmptyState.tsx  ErrorMessage.tsx  ItemMetadataDrawer.tsx  ItemTable.tsx  LoadingSkeleton.tsx  SplitPane.tsx
src/components/keys/: KeyDetails.tsx  KeysList.tsx
src/components/layout/: ContentTabs.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx  WorkspaceSwitcher.tsx
src/hooks/: useAutoHide.ts  useKeyboardShortcuts.ts
src/mock/: data.ts
src/services/: tauri.ts
src/stores/: appStore.ts  mockStore.ts
src/styles/: dev-ui.css
src/types/: index.ts
(+14 files in other folders)
